# opencl

./: .gitignore  LICENSE  OpenCL.cabal  README  README.markdown  README.org  Setup.hs  opencl.cabal
examples/: example01.hs  example02.hs  example03.hs  example04.hs  example05.hs  example06.hs
include/CL/: cl.h  cl_d3d11.h  cl_dx9_media_sharing.h
src/Control/Parallel/: OpenCL.hs
src/Control/Parallel/OpenCL/: CommandQueue.chs  Context.chs  Event.chs  Memory.chs  Program.chs  Query.chs  Types.chs
src/System/GPU/: OpenCL.hs
src/System/GPU/OpenCL/: CommandQueue.chs  CommandQueue.hs  Context.chs  Context.hs  Errors.hs  Event.chs  Event.hs  Memory.chs  Memory.hs  Program.chs  Program.hs  Query.chs  Query.hs  Types.chs  Types.hs  Util.hs
src/test/: test-opencl.hs
