Name: OpenCL
Version: 1.0.2.6
License: BSD3
License-File: LICENSE
Author: Luis Cabellos
Copyright: (c) 2011 Luis Cabellos, at The Institute of Physics of Cantabria (IFCA)
Category: GPU, FFI, Graphics
Build-Type: Simple
Stability: Experimental
Maintainer: Luis Cabellos
Homepage: https://github.com/zhensydow/opencl
Synopsis: Haskell high-level wrapper for OpenCL
bug-reports: https://github.com/zhensydow/opencl/issues
Cabal-Version: >=1.8
Tested-With: GHC
Description: 
    Haskell FFI binding to OpenCL library. It includes high-level wrappers to
    help development. Based on the OpenCLRaw package.
    .
    Most of the functions can throw a 'CLError' exception. Using the module
    'Control.Exception' helps to work with this package's exceptions.

Extra-source-files:
  README.org
  examples/example01.hs
  examples/example02.hs
  examples/example03.hs
  examples/example04.hs
  include/CL/*.h
  include/CL/*.hpp
  src/test/*.hs  

Library
  Build-tools: c2hs
  hs-Source-Dirs: src
  ghc-options: -Wall
  Build-Depends: base >=4.0 && < 5, bytestring -any, mtl==2.0.*
  Exposed-Modules: 
    System.GPU.OpenCL
    System.GPU.OpenCL.Query
    System.GPU.OpenCL.Context
    System.GPU.OpenCL.CommandQueue
    System.GPU.OpenCL.Memory
    System.GPU.OpenCL.Event
    System.GPU.OpenCL.Program
  Other-Modules: 
    System.GPU.OpenCL.Types

  
  if os(darwin)
    cpp-options: "-U__BLOCKS__"
  
  if os(windows)
      cpp-options: "-DCALLCONV=stdcall"
  else
      cpp-options: "-DCALLCONV=ccall"

  cpp-options: -Iinclude

Test-suite tests
  type:         exitcode-stdio-1.0
  main-is:      test-opencl.hs
  hs-Source-Dirs: src/test
  ghc-options:    -Wall
  extra-libraries: OpenCL
  build-depends: base >=4.0 && < 5, QuickCheck==2.4.0.*, OpenCL

source-repository this
  type: git
  location: https://zhensydow@github.com/zhensydow/opencl.git
  tag: 1.0.2.6
  branch: master

source-repository head
  type: git
  location: https://zhensydow@github.com/zhensydow/opencl.git
  branch: develop
